updatePriceOfAlbums swagger
